fix: :sparkles: Adding some fixes to the style so the game can be played on mobile

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,12 +1,16 @@
 .game {
   display: grid;
   background-color: #524e4e;
-  height: 700px;
-  width: 800px;
+  height: 80vh;
+  width: 80vh;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(6, 1fr);
   grid-column-gap: 10px;
   grid-row-gap: 1px;
+}
+
+.mobile-warning {
+  display: none;
 }
 
 .game-cell {
@@ -18,16 +22,38 @@
 
 .filledCellUser {
   margin: auto;
-  height: 100px;
-  width: 100px;
+  height: 80%;
+  width: 95%;
   border-radius: 50%;
   background-color: #ff2b73;
 }
 
 .filledCellOpponent {
   margin: auto;
-  height: 100px;
-  width: 100px;
+  height: 80%;
+  width: 95%;
   border-radius: 50%;
   background-color: #ffcd37;
+}
+
+@media only screen and (max-width: 600px) {
+  .game {
+    display: grid;
+    background-color: #524e4e;
+    height: 55vh;
+    width: 55vh;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 1px;
+  }
+
+  .mobile-warning {
+    display: block;
+    font-weight: 500;
+    font-family: "Roboto", sans-serif;
+    margin-top: 5vh;
+    padding: 0 2vh;
+    text-align: justify;
+  }
 }
