--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 17rem;
+    gap: 20vw;
 }
 
 .playerOneIndicator {
